@@ -1,3 +1,9 @@
+2007-11-13  Kenneth Zadeck <zadeck@naturalbridge.com>
+
+	* lto-function-out.c (output_expr_operand): Get the types correct for 
+	vector-cst.
+	* tree-cfg.c (dump_function_to_file): Print the function_decl in verbose mode.
+
 2007-11-13  Diego Novillo  <dnovillo@google.com>
 
 	* lto-tags.h: Call #error if BITS_PER_LTO_FLAGS_TYPE is
