@@ -1,3 +1,11 @@
+2007-11-13  Kenneth Zadeck <zadeck@naturalbridge.com>
+
+	* lto-read.c (input_type_ref): Renamed from get_type_ref.
+	(input_expr_operand, input_local_var): Renamed get_type_ref to 
+	input_type_ref.
+	(input_expr_operand): Get the types correct for 
+	vector-cst.  Get SSA_NAME_DEF_STMT correct for return_exprs.
+	
 2007-11-13  Doug Kwan  <dougkwan@google.com>
 
 	* lto-read.c (input_widest_uint_uleb128): New function.
